primitive and objects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <p> Lesson 2 Demos </p>
 
         <script src="functions_and_prototypes.js"></script>
-        
+        <script src="datatype.js"></script>
 
     </body>
 </html>
