--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <body>
         <h1>MEAN Stack</h1>
         <p> Lesson 2 Demos </p>
-
-        <script src="functions_and_prototypes.js"></script>
+    
         <script src="datatype.js"></script>
-
+        <script src="functions_and_prototypes.js"></script>
+        <script src="function.js"></script>
+    
     </body>
 </html>
