--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <script src="datatype.js"></script>
         <script src="functions_and_prototypes.js"></script>
         <script src="function.js"></script>
-    
+        <script src="IIFEs_Functions.js"></script>
     </body>
 </html>
