maps_and_classes.js

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <script src="functions_and_prototypes.js"></script>
         <script src="function.js"></script>
         <script src="IIFEs_Functions.js"></script>
+        <script src="maps_and_classes.js"></script>
     </body>
 </html>
