IIFEs_Callbacks_Closures.js

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <script src="function.js"></script>
         <script src="IIFEs_Functions.js"></script>
         <script src="maps_and_classes.js"></script>
+        <script src="IIFEs_Callbacks_Closures.js"></script>
     </body>
 </html>
