--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
         <script src="IIFEs_Functions.js"></script>
         <script src="maps_and_classes.js"></script>
         <script src="IIFEs_Callbacks_Closures.js"></script>
+
+        <script src="Promises.js"></script>
     </body>
 </html>
